--- a/style.css
+++ b/style.css
@@ -1,74 +1,89 @@
+body {
+    background-color: black;
+    width: 560px;
+    margin: auto;
+    padding-top: 100px;
+}
 
-* {
+div {
+    background-color: white;
+}
+
+.post-header {
+        padding-left: 10px;
+        padding-right: 8px;
+        width: 100%;
+        height: 43px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+}
+
+.header-rigo {
+    display: flex;
+    flex-direction: column;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-}
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
-    display: flex;
-    flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
-    padding: 20px;
+    margin-left: 40px;
+    justify-content: stretch;
 }
-.header {
-    text-align: center;
-    margin-bottom: 20px;
+.header-rigo p {
+    font-size: small;
 }
-.feed {
-    width: 100%;
-    max-width: 600px;
-}
-.post {
-    background-color: white;
-    margin-bottom: 20px;
-    border-radius: 10px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    padding: 15px;
-    font-family: Arial, Helvetica, sans-serif
-}
-.post__header {
+
+.header-icon {
     display: flex;
-    justify-content: space-between;
+    flex-direction: row;
     align-items: center;
-    margin-bottom: 10px;
 }
-.post__titlehtml5 {
-    font-size: 14px;
-    font-weight: bold;
-    color: #333;
+
+.post-img {
+    display: flex;
+    justify-content: center; 
+    align-items: center;
+    padding: 0;
+    margin: 0 auto; 
+    width: 100%; 
+    box-sizing: border-box; 
 }
-.post__subtitle {
-    font-size: 10px;
-    
-    color: #747272;
-}
-.post__date {
-    font-size: 14px;
-    color: #999;
-}
-.post__image {
-    width: 100%;
+
+.post-img img {
+    max-width: 100%; 
     height: auto;
-    border-radius: 10px;
-    margin-bottom: 10px;
+    object-fit: contain;
 }
-.post__description {
-    font-size: 14px;
-    color: #555;
-    line-height: 1.5;
-}
-.post__ubicacion {
+.post-content {
+    width: 100%;
+    padding: 0 10px;
     display: flex;
     flex-direction: column;
+    padding-left: 6px;
 }
-.post__autor {
+
+.post-icons {
+    width: 100%; 
     display: flex;
-    gap: 10px;
-}
-.post__icons {
-    display: flex;
+    flex-direction: row;
     justify-content: space-between;
+    padding: 20px 10px 0 6px;
+    align-items: center;
+}
+
+div.post-content p {
+    margin-bottom: 25px;
+    margin-top: 25px;
+}
+
+.header-text {
+    display: flex;
+    flex-direction: column;
+    font-size: 10px;
+    margin: auto;
+    padding: 5px;
+    width: 45px;
+    height: 14px;
+    padding-bottom: 29px;
+    padding-top: 0px;
 }
